--- a/css/final.css
+++ b/css/final.css
@@ -74,6 +74,10 @@ p {
     cursor: pointer;
 }
 
+.mapInfoWindow{
+    color: black;
+}
+
 .clearfix:after { 
    content: " ";
    display: block; 
