--- a/css/care_compass.css
+++ b/css/care_compass.css
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    line-height: 5%;
+    /*line-height: 5%;*/
     padding: 0px;
 }
 
@@ -136,4 +136,8 @@ h4 {
 
 #search-criteria {
     color: orange;
+}
+
+.gm-style-iw h1 {
+  color: black;
 }
