--- a/css/care_compass.css
+++ b/css/care_compass.css
@@ -49,12 +49,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    /*line-height: 5%;*/
+    font-size: 36px;
     padding: 0px;
 }
 
 h2 {
-    font-size: 3rem;
+    font-size: 36px;
+    margin: 0px;
 }
 h3 {
     font-size: 2rem;
@@ -107,7 +108,7 @@ h4 {
 } */
 
 #map-container{
-    height: 90%;
+    height: 100%;
     /* height: 600px;
     width: 100%; */
 }
