css update to address chrome autocorrect color changes.

--- a/css/care_compass.css
+++ b/css/care_compass.css
@@ -67,6 +67,16 @@ h4 {
     font-size: 1.5rem;
 }
 
+:-webkit-autofill,
+:-webkit-autofill:hover, 
+:-webkit-autofill:focus {
+  border: 1px solid green;
+  -webkit-text-fill-color: green;
+  -webkit-box-shadow: 0 0 0px 1000px #FFF inset;
+  transition: background-color 5000s ease-in-out 0s;
+
+}
+
 .dropdown-menu {
     max-height: 400px;
     overflow: hidden;
