--- a/css/care_compass.css
+++ b/css/care_compass.css
@@ -82,6 +82,18 @@ h4 {
     overflow-y: auto;
 }
 
+.even-row {
+    color: blue;
+    background-color: #CDE;
+    margin: 1px 0px;
+    padding: 0px 10px;
+}
+.odd-row {
+    color:black;
+    background-color: #DEF;
+    padding: 0px 10px;
+}
+
 
 /*p {
     color: #DFF;
@@ -134,6 +146,7 @@ h4 {
     float: left;
     background-color: #6B7283;
     width: 30%;
+    min-width: 420px;
     padding: 5px 30px 10px 30px;
     border-right: 1px solid black;
     /* min-height: 480px; */
@@ -146,14 +159,16 @@ h4 {
 
 #search-by-name-div {
     padding-right: 0;
+    
 }
 
 #search-by-name {
-    width: 100%;
+    width: 100%;    
 }
 
 #search-by-name-btn  {
     padding-left: 3px;
+    float: right;
 }
 
 #logo{
@@ -176,7 +191,7 @@ h4 {
 }
 
 #search-by-city-btn {
-  width: 100%;
+  width: 98%;
 }
 
 .row {
@@ -185,5 +200,12 @@ h4 {
 
 #dynamic-city-list {
   color: black;
+}
+
+#search-results{
+    margin: 25px 0px;
+    max-height: 500px;
+    overflow: hidden;
+    overflow-y: auto;    
 }
 
