CSS HTML testing for user control display.

--- a/css/care_compass.css
+++ b/css/care_compass.css
@@ -159,14 +159,16 @@ h4 {
 
 #search-by-name-div {
     padding-right: 0;
+    
 }
 
 #search-by-name {
-    width: auto;
+    width: 100%;    
 }
 
 #search-by-name-btn  {
     padding-left: 3px;
+    float: right;
 }
 
 #logo{
