--- a/css/care_compass.css
+++ b/css/care_compass.css
@@ -203,6 +203,10 @@ h4 {
 }
 
 #search-results{
+    border-top: 4px solid black;
+    border-right: 4px solid gray;
+    border-bottom: 4px solid gray;
+    border-left: 4px solid black;
     margin: 25px 0px;
     max-height: 500px;
     overflow: hidden;
