--- a/css/care_compass.css
+++ b/css/care_compass.css
@@ -67,6 +67,15 @@ h4 {
     font-size: 1.5rem;
 }
 
+.label-as-badge {
+    border-radius: 1em;
+}
+
+span.label.pull-left {
+    margin-right: 10px;
+    width: 25px;
+}
+
 :-webkit-autofill,
 :-webkit-autofill:hover, 
 :-webkit-autofill:focus {
@@ -203,10 +212,10 @@ h4 {
 }
 
 #search-results{
-    border-top: 4px solid black;
-    border-right: 4px solid gray;
-    border-bottom: 4px solid gray;
-    border-left: 4px solid black;
+    border-top: 1px solid black;
+    border-right: 1px solid gray;
+    border-bottom: 1px solid gray;
+    border-left: 1px solid black;
     margin: 25px 0px;
     max-height: 500px;
     overflow: hidden;
